# student_management_api

./: README.md  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
migrations/: env.py
migrations/versions/: ef3cfa5d67e8_initial_tables.py
routers/: courses.py  students.py
tests/: test_students.py
